--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "admin-mongo": "0.0.23",
     "cors": "^2.8.5",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.9"
   },
   "devDependencies": {},
   "scripts": {
